# ltx

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs
src/commands/: build.rs  clean.rs  mod.rs  new.rs  run.rs  watch.rs
src/messages/: create.rs  mod.rs
templates/: bibliography.bib  ltx.toml  main.tex
