[package]
name = "ltx"
authors = ["Michał Czyż <mike@c2yz.com>"]
version = "0.1.0"
edition = "2024"

description = "A command-line tool for managing LaTeX projects"
homepage = "https://github.com/eRgo35/ltx"
repository = "https://github.com/eRgo35/ltx"
documentation = "https://github.com/eRgo35/ltx"
keywords = ["latex", "cli", "tool"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "ltx"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
inquire = "0.7"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
